--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div> <!--END  NAVBAR-->
                 
                 <div class="col-xs-12">
-                    <h1>TITLE HERE</h1>
+                    <h1>TITLE</h1>
                 </div>
 
 
