--- a/aboutus.html
+++ b/aboutus.html
@@ -14,39 +14,54 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
         <!--Font Style-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Acme&family=Lato&display=swap" rel="stylesheet">
     </head>
 
-    <body>
+    <body class="josefin-sans">
         <!--Start of Container-->
         <div class="container-fluid">
             <!--Start of First Row-->
             <div class="row">
                 <div class="col-lg-12">
                     <!--Start of Navbar-->
-                    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                    <nav class="navbar navbar-expand-lg">
                         <div class="container-fluid">
-                            <a class="navbar-brand" href="index.html">Bakery</a>
+                            <a class="navbar-brand" href="index.html">
+                                <img src="media/SDLogo.png" alt="Bootstrap" width="50" height="50">
+                            </a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
                             <div class="collapse navbar-collapse" id="navbarNav">
                                 <ul class="navbar-nav">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="cupcakes.html">Cupcakes</a>
+                                        <a class="nav-link one" href="cupcakes.html">Cupcakes</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="cookies.html">Cookies</a>
+                                        <a class="nav-link two" href="cookies.html">Cookies</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="cakes.html">Cakes</a>
+                                        <a class="nav-link three" href="cakes.html">Cakes</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="aboutus.html">About Us</a>
+                                        <a class="nav-link four active" href="aboutus.html">About Us</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link five" href="faq.html">FAQ</a>
                                     </li>
                                 </ul>
                             </div>
                         </div>
+                        <!--BAG ICON-->
+                        <a class="icon-link icon-link-hover bagg" href="cart.html">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+                                <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
+                            </svg>
+                            <svg class="bi" aria-hidden="true"><use xlink:href="#arrow-right"></use></svg>
+                        </a>  
                     </nav>
                     <!--End of Navbar-->
                 </div>
@@ -55,19 +70,40 @@
 
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 id="header">About Us</h1>
+                    <h1 class="atitle">About Us</h1>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-lg-6">
-                    <h1 id="header">Pictures go here</h1>
-                </div>
-
-                <div class="col-lg-6">
-                    <h1 id="header">Info goes here</h1>
-                </div>
+            <div class="boxx">
+                <h3>Our small business was established in 2018. We found our love for baking and started small selling to family and friends. Now we sells to people everywhere around Chicago. We proudly serve people in the Chicago area with our delicious flavors. Keep your eyes looking for our new flavors monthly!</h3>
             </div>
+
+            <img class="pic" src="media/bakery.jpg" alt="bakery" width="670" height="370">
+
+            <!--TABLE-->
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>
+                    <th scope="col">Handle</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    
+                    <td>Karina</td>
+                    <td>Duic</td>
+                    <td>kduic@cps.edu</td>
+                  </tr>
+                  <tr>
+                    
+                    <td>Rhea Mae</td>
+                    <td>Bayan</td>
+                    <td>rmbayan@cps.edu</td>
+                  </tr>
+                </tbody>
+              </table>
 
             <!--Start of Footer-->
             <div class="row full">
@@ -80,14 +116,15 @@
                 </div>
                 <div class="col-lg-6 right">
                     <h3 class="para">Have to contact us?</h3>
-                    <button type="button" class="btn btn-light buttoninput style">
-                        <a target="_blank" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">Click here.
-                    </button>
+                    <div>
+                        <a class="btnn" target="_blank" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">Click here.</a>
+                    </div>
                 </div>
             </div>
             <!--End of Footer-->
         </div>
         <!--End of Container-->
+        <script src="main.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
 </html>
