--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
             <br>
             <!--Start of Cards Row-->
             <div class="row">
-                <div class="col-lg-4">
-                    <div class="card"><!--CARD ONE-->
-                    <img class="card-img-top" src="media/cake.jpg" alt="Card image cap">
+                <div class="col-lg-4 d-flex">
+                    <div class="card flex-fill"><!--CARD ONE-->
+                        <img class="card-img-top" src="media/cake.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Cakes</h5>
                             <p class="card-text">Our speciality cakes are moist and delicious, try them out! Click the button below to be redirected to the cakes page.</p>
@@ -181,8 +181,8 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4">
-                    <div class="card"><!--CARD TWO-->
+                <div class="col-lg-4 d-flex">
+                    <div class="card flex-fill"><!--CARD TWO-->
                         <img class="card-img-top" src="media/cupcakes.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Cupcakes</h5>
@@ -192,8 +192,8 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4">
-                    <div class="card"><!--CARD THREE-->
+                <div class="col-lg-4 d-flex">
+                    <div class="card flex-fill"><!--CARD THREE-->
                         <img class="card-img-top" src="media/cookies.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Cookies</h5>
