--- a/thankyou.html
+++ b/thankyou.html
@@ -80,14 +80,14 @@
         <main class="container-fluid fade-in-text">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 id="header" class="up">Thank You For Your Purchase!</h1>
+                    <h1 id="header" class="up thankyou">Thank You For Your Purchase!</h1>
                 </div>
             </div>
 
             <!--Start of Receipt Row-->
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Thank you so much for your order! We will do our very best to give you your delicious treats! See you soon!</p>
+                    <p class="thankyounote">Thank you so much for your order! We will do our very best to give you your delicious treats! See you soon! 🧁🍪🎂</p>
                 </div>
                 <button id="receiptButton" onclick="receipt()">View Receipt</button>
 
