--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
                     <div>
                         <a class="btnn" target="_blank" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">Click here.</a>
                     </div>
+                    <p>© 2023 Sweet Delights</p>
                 </div>
             </div>
         </footer>
