--- a/cart.html
+++ b/cart.html
@@ -745,7 +745,7 @@
                     </div>
                     <div class="col-lg-6">
                         <forms class="leng">
-                            <label for="state">State:</label>
+                            <label for="state">State (Optional):</label>
                             <select name="state" id="state">
                                 <option value="" selected="selected">Select a State</option>
                                 <option value="AL">Alabama</option>
