--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
             <!--Start of Toast-->
             <div class="toast-container position-fixed bottom-0 end-0 p-3">
-                <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                <div id="inputSuccess" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                     <div class="toast-header">
                         <img src="media/SDLogo.png" class="rounded me-2" alt="..." width="50" height="50">
                         <strong class="me-auto">Sweet Delights</strong>
@@ -233,6 +233,48 @@
                     </div>
                     <div class="toast-body">
                         Enjoy 15% Off Using This Promocode: Rewards15
+                    </div>
+                </div>
+            </div>
+
+            <div class="toast-container position-fixed bottom-0 end-0 p-3">
+                <div id="nameError" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                    <div class="toast-header">
+                        <img src="media/SDLogo.png" class="rounded me-2" alt="..." width="50" height="50">
+                        <strong class="me-auto">Sweet Delights</strong>
+                        <small>Error!</small>
+                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                    </div>
+                    <div class="toast-body">
+                        Name must be filled out!
+                    </div>
+                </div>
+            </div>
+
+            <div class="toast-container position-fixed bottom-0 end-0 p-3">
+                <div id="emailError" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                    <div class="toast-header">
+                        <img src="media/SDLogo.png" class="rounded me-2" alt="..." width="50" height="50">
+                        <strong class="me-auto">Sweet Delights</strong>
+                        <small>Error!</small>
+                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                    </div>
+                    <div class="toast-body">
+                        Email must be filled out!
+                    </div>
+                </div>
+            </div>
+
+            <div class="toast-container position-fixed bottom-0 end-0 p-3">
+                <div id="invalidEmail" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                    <div class="toast-header">
+                        <img src="media/SDLogo.png" class="rounded me-2" alt="..." width="50" height="50">
+                        <strong class="me-auto">Sweet Delights</strong>
+                        <small>Error!</small>
+                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                    </div>
+                    <div class="toast-body">
+                        Invalid email address!
                     </div>
                 </div>
             </div>
@@ -251,6 +293,14 @@
                         <input class="inputType" type="text" id="email" name="email" placeholder="Your email">
                         <input class="buttoninput" type="submit" value="Sign up">
                     </forms>
+                    <h2 class="re">Resources: cakemehometonight.com,
+                        sallysbakingaddiction.com,
+                        lancastercupcake.com,                       
+                        planted365.com,       
+                        yahoo.com,             
+                        freepik.com,            
+                        Abroad with Ash
+                    </h2>
                 </div>
 
                 <div class="col-lg-6 right">
