--- a/thankyou.html
+++ b/thankyou.html
@@ -111,6 +111,14 @@
                         <input class="inputType" type="text" id="email" name="email" placeholder="Your email">
                         <input class="buttoninput" type="submit" value="Sign up">
                     </forms>
+                    <h2 class="re">Resources: cakemehometonight.com,
+                        sallysbakingaddiction.com,
+                        lancastercupcake.com,                       
+                        planted365.com,       
+                        yahoo.com,             
+                        freepik.com,            
+                        Abroad with Ash
+                    </h2>
                 </div>
 
                 <div class="col-lg-6 right">
